Disable channels in config.yaml
Comment out several channels in the configuration file.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -130,12 +130,12 @@ platforms:
     name: "财联社热门"
   - id: "gelonghui"
     name: "格隆汇"
-  - id: "xueqiu"
-    name: "雪球"
-  - id: "jin10"
-    name: "金十数据"
-  - id: "fastbull"
-    name: "快讯通"
+  # - id: "xueqiu"
+  #   name: "雪球"
+  # - id: "jin10"
+  #   name: "金十数据"
+  # - id: "fastbull"
+  #   name: "快讯通"
 
   # === 社交/短视频/娱乐类 ===
   - id: "weibo"
@@ -156,26 +156,25 @@ platforms:
     name: "IT之家"
   - id: "juejin"
     name: "掘金"
-  - id: "github"
-    name: "GitHub"
+  # - id: "github"
+  #   name: "GitHub"
   - id: "hackernews"
     name: "Hacker News"
   - id: "solidot"
     name: "Solidot"
-  - id: "v2ex"
-    name: "V2EX"
-  - id: "nowcoder"
-    name: "牛客网"
-  - id: "pcbeta"
-    name: "远景论坛"
+
+  # - id: "nowcoder"
+  #   name: "牛客网"
+  # - id: "pcbeta"
+  #   name: "远景论坛"
   - id: "sspai"
     name: "少数派"
   - id: "producthunt"
     name: "ProductHunt"
 
   # === 其他/工具类 ===
-  - id: "chongbuluo"
-    name: "虫部落"
+  # - id: "chongbuluo"
+  #   name: "虫部落"
 
   # ======================================================
   # 暂时失败的渠道（可能需要修复或接口已变更）
